<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="govinmaxim.githubclient.view.AuthorizationActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_user_login_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/text_margin_end"
        android:layout_marginStart="@dimen/text_margin_start"
        android:layout_marginTop="@dimen/text_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_user_name"
            style="@style/InputTextEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_login"
            android:inputType="textCapSentences" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_user_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/text_margin_end"
        android:layout_marginStart="@dimen/text_margin_start"
        android:layout_marginTop="@dimen/text_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_login_layout"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_user_password"
            style="@style/InputTextEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_authorization"
        style="@style/ButtonAuthorization"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginEnd="@dimen/text_margin_end"
        android:layout_marginStart="@dimen/text_margin_start"
        android:layout_marginTop="@dimen/text_margin_top"
        android:background="@drawable/button_authorization_background"
        android:textSize="@dimen/button_text_size"
        android:paddingStart="@dimen/button_text_padding"
        android:paddingEnd="@dimen/button_text_padding"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_password_layout"
        app:layout_constraintVertical_bias="0.0" />

    <include
        layout="@layout/progress_bar_loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
